--- a/app/index-async.html
+++ b/app/index-async.html
@@ -45,7 +45,7 @@
 </head>
 <body ng-cloak>
   <ul class="menu">
-    <li><a href="#/view1">view1</a></li>
+    <li><a href="#/chart">chart</a></li>
     <li><a href="#/view2">view2</a></li>
   </ul>
 
