--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
   <ul class="menu">
-    <li><a href="#/view1">view1</a></li>
+    <li><a href="#/chart">chart</a></li>
     <li><a href="#/view2">view2</a></li>
   </ul>
 
@@ -26,11 +26,13 @@
 
   <div ng-view></div>
 
-  <div>Angular seed app: v<span app-version></span></div>
+  <!--<div>Angular seed app: v<span app-version></span></div>-->
 
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
   -->
+  <script src="bower_components/amcharts/dist/amcharts/amcharts.js" type="text/javascript"></script>
+  <script src="bower_components/amcharts/dist/amcharts/serial.js" type="text/javascript"></script>
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
   <script src="js/app.js"></script>
